[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://04b03mod.tres" type="DynamicFont" id=2]
[ext_resource path="res://ButtonKeyConf.tscn" type="PackedScene" id=3]
[ext_resource path="res://note.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]

flags = 0
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="AtlasTexture" id=2]

flags = 0
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[node name="Pause" type="Node2D"]

light_mask = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Polygon2D" type="Polygon2D" parent="." index="0"]

light_mask = 0
polygon = PoolVector2Array( 0, 0, 0, 320, 1024, 320, 1024, 0 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 0.490196 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Polygon2D2" type="Polygon2D" parent="." index="1"]

light_mask = 0
position = Vector2( 0, 128 )
polygon = PoolVector2Array( 32, 32, 32, 160, 352, 160, 352, 32 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 0.784314 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Polygon2D4" type="Polygon2D" parent="." index="2"]

light_mask = 0
polygon = PoolVector2Array( 32, 32, 32, 144, 352, 144, 352, 32 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 0.784314 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Polygon2D3" type="Polygon2D" parent="." index="3"]

light_mask = 0
polygon = PoolVector2Array( 368, 32, 368, 288, 992, 288, 992, 32 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 0.784314 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="ButtonQuit" type="Button" parent="." index="4"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 80.0
margin_right = 338.0
margin_bottom = 102.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "MENU_QUIT"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Rect", "custom_fonts" ]

[node name="ButtonReset" type="Button" parent="." index="5"]

modulate = Color( 1, 0, 0, 1 )
light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 112.0
margin_right = 336.0
margin_bottom = 134.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "MENU_RESET"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "Focus", "Rect", "Visibility", "custom_fonts" ]

[node name="ButtonFullscreen" type="Button" parent="." index="6"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 48.0
margin_right = 336.0
margin_bottom = 70.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "MENU_FULL"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "Focus", "Rect", "Theme", "custom_fonts" ]

[node name="ButtonKeyConf6" parent="." index="7" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 48.0
margin_top = 240.0
margin_right = 96.0
margin_bottom = 262.0
action = "ui_restart"

[node name="ButtonKeyConf2" parent="." index="8" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 96.0
margin_top = 208.0
margin_right = 144.0
margin_bottom = 230.0
action = "ui_change"

[node name="ButtonKeyConf3" parent="." index="9" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 224.0
margin_top = 240.0
margin_right = 272.0
margin_bottom = 262.0
action = "ui_left"

[node name="ButtonKeyConf7" parent="." index="10" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 144.0
margin_top = 256.0
margin_right = 192.0
margin_bottom = 278.0
action = "ui_pause"

[node name="ButtonKeyConf4" parent="." index="11" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 256.0
margin_top = 208.0
margin_right = 304.0
margin_bottom = 230.0
action = "ui_jump"

[node name="ButtonKeyConf5" parent="." index="12" instance=ExtResource( 3 )]

light_mask = 0
margin_left = 288.0
margin_top = 240.0
margin_right = 336.0
margin_bottom = 262.0
action = "ui_right"

[node name="Label" type="Label" parent="." index="13"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 176.0
margin_right = 282.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "MENU_CONTROLS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label7" type="Label" parent="." index="14"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 48.0
margin_right = 558.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "MENU_LVLSL"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label8" type="Label" parent="." index="15"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "MENU_PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="LevelsContainer" type="ScrollContainer" parent="." index="16"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_top = 80.0
margin_right = 992.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Rect", "Scroll" ]

[node name="GridContainer" type="GridContainer" parent="LevelsContainer" index="0"]

light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 6

[node name="ButtonITA" type="Button" parent="." index="17"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 112.0
margin_right = 102.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "ITA"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="ButtonENG" type="Button" parent="." index="18"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 112.0
margin_right = 152.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "ENG"
flat = true
align = 1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="TextureButton" type="TextureButton" parent="." index="19"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[connection signal="pressed" from="ButtonQuit" to="." method="_on_ButtonQuit_pressed"]

[connection signal="pressed" from="ButtonReset" to="." method="_on_ButtonReset_pressed"]

[connection signal="toggled" from="ButtonFullscreen" to="." method="_on_ButtonFullscreen_toggled"]

[connection signal="pressed" from="ButtonITA" to="." method="_on_ButtonITA_pressed"]

[connection signal="pressed" from="ButtonENG" to="." method="_on_ButtonENG_pressed"]

[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]


